# motion_planning

./: CMakeLists.txt  client.cpp  demo_CMakeLists.txt  joint_trajectory_client.cpp  package.xml
include/motion_planning/: forward.h  inverse.h  manipulability_gradient.h
launch/: manipulability_planner_sim.launch.py
src/: forward.cpp  inverse.cpp  joint_state_listener.cpp  manipulability_client.cpp  manipulability_client_twist.cpp  manipulability_gradient.cpp  manipulability_planner.cpp  manipulability_planner_sim.cpp  normal_cluster.cpp  with1.csv  with2.csv  with2_pot_manip30_goal1.csv  with2_virtual.csv  with2_virtual_pot.csv  with2_virtual_pot_split.csv  with2_virtual_pot_split2.csv  with2_virtual_split.csv  with2_virtual_split2.csv  without1.csv  without2.csv  without2_pot.csv  without2_virtual_split.csv
